# cmake_coding

./: .gitignore  CMakeLists.txt
src/: main.cpp
